feat: todo: split trigger and target

--- a/@x_m/_examples/src/components/interact/index.module.css
+++ b/@x_m/_examples/src/components/interact/index.module.css
@@ -1,12 +1,17 @@
-.wrapper {
+.trigger {
+  width: 100px;
+  height: 100px;
+  background-color: #ddd;
+  cursor: grab;
+}
+
+.target {
   position: fixed;
   width: 100px;
   height: 100px;
-  left: -50px;
-  top: -50px;
-  /* border-radius: 100%; */
+  left: 50%;
+  top: 50%;
   background-color: #ddd;
   background-image: url(../../assets/lenna.png);
   background-size: cover;
-  cursor: grab;
 }
