--- a/@x_m/_examples/src/components/interact/index.module.css
+++ b/@x_m/_examples/src/components/interact/index.module.css
@@ -1,9 +1,9 @@
-.trigger {
+/* .trigger {
   width: 100px;
   height: 100px;
   background-color: #ddd;
   cursor: grab;
-}
+} */
 
 .target {
   position: fixed;
@@ -14,4 +14,5 @@
   background-color: #ddd;
   background-image: url(../../assets/lenna.png);
   background-size: cover;
+  cursor: grab;
 }
