--- a/@x_m/_examples/src/components/prize-wheel/index.module.scss
+++ b/@x_m/_examples/src/components/prize-wheel/index.module.scss
@@ -1,14 +1,21 @@
-.wrapper {
+$size: 200px;
+
+.root {
   position: relative;
-  width: 300px;
-  height: 300px;
+  padding: 16px;
+}
+
+.wheelWrapper {
+  position: relative;
+  width: $size;
+  height: $size;
   border-radius: 100%;
   background-color: #eeeeee;
 }
 
 .shouldStopAt {
   position: absolute;
-  width: 150px;
+  width: calc($size / 2);
   left: 50%;
   top: 50%;
   border-top: 1px dashed gray;
@@ -18,10 +25,18 @@
 
 .curDeg {
   position: absolute;
-  width: 150px;
+  width: calc($size / 2);
   left: 50%;
   top: 50%;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   transform-origin: 0 center;
+}
+
+.trigger {
+  position: relative;
+  padding: 4px 1em;
+  left: calc($size / 2);
+  margin: 1em 0;
+  transform: translate(-50%);
 }
