feat: 新增状态管理

--- a/@x_m/_examples/src/components/interact/index.module.css
+++ b/@x_m/_examples/src/components/interact/index.module.css
@@ -12,7 +12,7 @@
   left: 50%;
   top: 50%;
   background-color: #ddd;
-  background-image: url(../../assets/lenna.png);
+  background-image: url(../../assets/lenna.jpg);
   background-size: cover;
   cursor: grab;
 }
