feat: try to use mui

--- a/@x_m/_examples/src/components/image-mosaicking/PreviewGroup/index.module.scss
+++ b/@x_m/_examples/src/components/image-mosaicking/PreviewGroup/index.module.scss
@@ -1,7 +1,15 @@
 .root {
-  padding: 16px;
   white-space: nowrap;
   overflow: auto;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+}
+
+.previewItem {
+  margin-right: 16px;
 }
 
 .previewItem-enter {
