--- a/@x_m/_examples/src/components/image-mosaicking/PreviewItem/index.module.scss
+++ b/@x_m/_examples/src/components/image-mosaicking/PreviewItem/index.module.scss
@@ -5,20 +5,19 @@ $size: 100px;
   display: inline-block;
   width: $size;
   height: $size;
-  margin-right: 16px;
   overflow: hidden;
-  transition: all 0.5s;
   background-color: #eee;
 
-  &.isRemoved {
-    width: 0;
-    margin-right: 0;
+  .remove {
+    position: absolute;
+    right: 0;
+    top: 0;
   }
+}
 
-  .img {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
+.img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
