feat: 图片编辑器样式布局初步完成

--- a/@x_m/_examples/src/components/image-mosaicking/PreviewGroup/index.module.scss
+++ b/@x_m/_examples/src/components/image-mosaicking/PreviewGroup/index.module.scss
@@ -1,15 +1,15 @@
+$size: 100px;
+
 .root {
   white-space: nowrap;
-  overflow: auto;
-}
-
-.input {
-  width: 100%;
-  height: 100%;
+  height: $size;
+  overflow: auto hidden;
 }
 
 .previewItem {
-  margin-right: 16px;
+  width: $size;
+  height: $size;
+  margin-left: 12px;
 }
 
 .previewItem-enter {
