--- a/@x_m/_examples/src/components/image-mosaicking/index.module.scss
+++ b/@x_m/_examples/src/components/image-mosaicking/index.module.scss
@@ -1,6 +1,34 @@
-.previewGroup {
-  position: absolute;
+$size: 100px;
+
+.root {
+  display: flex;
   width: 100%;
-  left: 0;
-  bottom: 0;
+  height: 100%;
+  flex-direction: column;
+}
+
+.imageManager {
+  width: 100%;
+  flex: 1 1 auto;
+  margin-bottom: 12px;
+}
+
+.footer {
+  width: 100%;
+  flex: 0 0 $size;
+  display: flex;
+}
+
+.upload {
+  flex: 0 0 $size;
+}
+
+.previewGroup {
+  flex: 1 1 100%;
+}
+
+.icons {
+  position: absolute;
+  top: 12px;
+  right: 12px;
 }
