--- a/@zimi/www/src/pages/index.module.scss
+++ b/@zimi/www/src/pages/index.module.scss
@@ -2,9 +2,8 @@
   background-color: blue;
 }
 
-/* @TODO: scss 功能无效 */
-/* @include device('mobile') {
-  .root: {
+@include device('mobile') {
+  .root {
     background-color: black;
   }
-} */
+}
