--- a/@zimi/www/src/styles/common/variables.scss
+++ b/@zimi/www/src/styles/common/variables.scss
@@ -7,6 +7,9 @@ $color-primary-6: rgba(36, 116, 181, 0.6);
 $color-primary-7: rgba(36, 116, 181, 0.7);
 $color-primary-8: rgba(36, 116, 181, 0.8);
 $color-primary-9: rgba(36, 116, 181, 0.9);
+$color-primary-light: rgba(36, 116, 181, 0.7);
+$color-primary-main: rgba(36, 116, 181, 0.8);
+$color-primary-dark: rgba(36, 116, 181, 0.9);
 
 $color-black-1: rgba(28, 13, 26, 0.1);
 $color-black-2: rgba(28, 13, 26, 0.2);
@@ -17,6 +20,9 @@ $color-black-6: rgba(28, 13, 26, 0.6);
 $color-black-7: rgba(28, 13, 26, 0.7);
 $color-black-8: rgba(28, 13, 26, 0.8);
 $color-black-9: rgba(28, 13, 26, 0.9);
+$color-black-light: rgba(28, 13, 26, 0.7);
+$color-black-main: rgba(28, 13, 26, 0.8);
+$color-black-dark: rgba(28, 13, 26, 0.9);
 
 $color-white-1: rgba(233, 215, 223, 0.1);
 $color-white-2: rgba(233, 215, 223, 0.2);
@@ -27,3 +33,6 @@ $color-white-6: rgba(233, 215, 223, 0.6);
 $color-white-7: rgba(233, 215, 223, 0.7);
 $color-white-8: rgba(233, 215, 223, 0.8);
 $color-white-9: rgba(233, 215, 223, 0.9);
+$color-white-light: rgba(233, 215, 223, 0.7);
+$color-white-main: rgba(233, 215, 223, 0.8);
+$color-white-dark: rgba(233, 215, 223, 0.9);
